--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.3.1",
-    "ws": "^8.14.2"
+    "dotenv": "^16.4.5",
+    "require": "^2.4.20",
+    "ws": "^8.16.0"
   }
 }
